@@ -6,6 +6,11 @@ logdata-anomaly-miner (1.0.1~pre0) bionic; urgency=low
   * Added functions getNameByComponent and getIdByComponent to
     AnalysisChild.py
   * Update DefaultMailNotificationEventHandler.py to python3
+  * Add EventData.py to refactor output.
+  * Refactor and harmonize output of all classes.
+  Features:
+  * Added VerboseUnparsedAtomHandler that applies the DebugMatchContext to
+    unparsed log lines
   Bugfixes including:
   * Fixed dependencies in Debian packaging
   * Fixed typo in various analysis components
@@ -20,7 +25,7 @@ logdata-anomaly-miner (1.0.1~pre0) bionic; urgency=low
   * Fixed timezone offset in ModuloTimeMatchRule
   * Minor bugfixes
 
- -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Thu, 11 Jul 2019 17:00:00 +0000
+ -- Markus Wurzenberger <markus.wurzenberger@ait.ac.at>  Wed,  3 Dec 2019 17:00:00 +0000
 
 logdata-anomaly-miner (1.0.0) bionic; urgency=low
   
